--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "cookies": "^0.8.0",
     "moment": "^2.29.1",
-    "next": "11.0.1",
+    "next": "^11.1.4",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
